tests/ui/borrowck/borrowck-break-uninit-2.stderr
error[E0381]: used binding `x` isn't initialized
  --> $DIR/borrowck-break-uninit-2.rs:9:20
   |
LL |     let x: isize;
   |         - binding declared here but left uninitialized
...
LL |     println!("{}", x);
   |     ---------------^-
   |     |              |
   |     |              `x` used here but it isn't initialized
   |     in this macro invocation (#1)
  --> $SRC_DIR/std/src/macros.rs:LL:COL
   |
   = note: in this expansion of `println!` (#1)
  ::: $SRC_DIR/std/src/macros.rs:LL:COL
   |
   = note: in this macro invocation (#2)
  --> $SRC_DIR/core/src/macros/mod.rs:LL:COL
   |
   = note: in this expansion of `$crate::format_args_nl!` (#2)
   |
help: consider assigning a value
   |
LL |     let x: isize = 0;
   |                  +++

error: aborting due to previous error

For more information about this error, try `rustc --explain E0381`.
